[gd_scene load_steps=34 format=3 uid="uid://c0emh8ghyjahn"]

[ext_resource type="PackedScene" uid="uid://cbyyvvyat86w5" path="res://Scenes/player.tscn" id="1_4leii"]
[ext_resource type="Script" uid="uid://seermq5qjk53" path="res://Scripts/lobby.gd" id="1_yv4fl"]
[ext_resource type="PackedScene" uid="uid://cwend30ytnol" path="res://Scenes/door_3x2.tscn" id="3_lnwgw"]
[ext_resource type="PackedScene" uid="uid://b0aqdk6pigx2w" path="res://Scenes/door_2x_1.tscn" id="4_5e8bk"]
[ext_resource type="PackedScene" uid="uid://c28egmqahn8xt" path="res://Scenes/player_inventory_ui.tscn" id="4_w6w7q"]
[ext_resource type="PackedScene" uid="uid://iqlb1nn0jvcq" path="res://Scenes/jukebox.tscn" id="5_cxsrf"]
[ext_resource type="PackedScene" uid="uid://d7lp4s0ykvwy" path="res://Scenes/popup_menu.tscn" id="5_hjbis"]
[ext_resource type="PackedScene" uid="uid://jbi5y6wbqvty" path="res://Scenes/toilet.tscn" id="6_00lyk"]
[ext_resource type="PackedScene" uid="uid://ckyokvp2ht7k4" path="res://Scenes/teleporter.tscn" id="6_uw7gq"]
[ext_resource type="Texture2D" uid="uid://bphcf4ms3tqrh" path="res://Sprites/Flower1.png" id="7_c7ds3"]
[ext_resource type="Texture2D" uid="uid://dn5jut8pcj2f2" path="res://Sprites/BlackHole.png" id="8_pfqgr"]
[ext_resource type="Texture2D" uid="uid://dhl6cfjpj8opb" path="res://Sprites/Stars.png" id="9_edsw2"]
[ext_resource type="Texture2D" uid="uid://cyorxtqteckur" path="res://Sprites/BlackHoleLight.png" id="11_4qdey"]
[ext_resource type="PackedScene" uid="uid://kc2fi5eyiciq" path="res://Scenes/control_center.tscn" id="13_2vsml"]
[ext_resource type="PackedScene" uid="uid://bur0yrq5xq3c8" path="res://Scenes/mission_control_panel.tscn" id="15_407ir"]
[ext_resource type="AudioStream" uid="uid://dv0xj5f16yjf5" path="res://Sounds/Music/Entropy OST - Echo Of The Void.wav" id="16_rh7j6"]
[ext_resource type="PackedScene" uid="uid://v6m0dwwwsweu" path="res://Scenes/charge_pistol.tscn" id="21_3ngni"]
[ext_resource type="Script" uid="uid://bweumqm8d8w6k" path="res://Scripts/ship_movement.gd" id="21_4jmuv"]
[ext_resource type="Script" uid="uid://vo5vkmcq5daw" path="res://Scripts/poi.gd" id="22_3ngni"]
[ext_resource type="Texture2D" uid="uid://ccco6t32oe8xd" path="res://Sprites/POI.png" id="23_wbbk6"]
[ext_resource type="Texture2D" uid="uid://b0a1a3k4xrvvr" path="res://Sprites/POIBackground.png" id="24_og020"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_hc8ka"]
scenes/1/scene = ExtResource("4_5e8bk")
scenes/2/scene = ExtResource("3_lnwgw")

[sub_resource type="TileSet" id="TileSet_votjc"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetScenesCollectionSource_hc8ka")

[sub_resource type="TileSet" id="TileSet_mdhpy"]
navigation_layer_0/layers = 1

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_olwd1"]
scenes/1/scene = ExtResource("6_uw7gq")
scenes/2/scene = ExtResource("13_2vsml")
scenes/3/scene = ExtResource("4_5e8bk")
scenes/4/scene = ExtResource("5_cxsrf")
scenes/5/scene = ExtResource("6_00lyk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u6n7u"]
texture = ExtResource("7_c7ds3")
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 8)
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -3.75, 6, -4, 5.875, 7, -5, 7)

[sub_resource type="TileSet" id="TileSet_srk18"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetScenesCollectionSource_olwd1")
sources/1 = SubResource("TileSetAtlasSource_u6n7u")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbbk6"]
bg_color = Color(0.640609, 0.539431, 0.823283, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jxeht"]
blend_mode = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_chtx6"]
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 84.4
angle_min = 1.07288e-05
angle_max = 263.2
spread = 81.404
angular_velocity_min = -1.60933e-05
angular_velocity_max = 81.13
orbit_velocity_min = 0.0430001
orbit_velocity_max = 0.0980001
radial_velocity_min = 0.739978
radial_velocity_max = 1.33998
gravity = Vector3(0, 0, 0)
radial_accel_min = -19.36
radial_accel_max = -15.06
scale_min = 0.85
scale_max = 1.95
scale_over_velocity_max = 75.27
color = Color(0, 0, 0, 1)
hue_variation_min = -2.23517e-08
hue_variation_max = -2.23517e-08
turbulence_noise_strength = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bbmoa"]

[sub_resource type="PrismMesh" id="PrismMesh_4jmuv"]
size = Vector3(20, 20, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_4jmuv"]
radius = 33.0606

[node name="Lobby" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_yv4fl")

[node name="ShipInside" type="Node2D" parent="."]

[node name="WallsLayer" type="TileMapLayer" parent="ShipInside"]
y_sort_enabled = true
texture_filter = 1
tile_set = SubResource("TileSet_votjc")

[node name="FloorLayer" type="TileMapLayer" parent="ShipInside"]
z_index = -161
tile_set = SubResource("TileSet_mdhpy")

[node name="BuildingLayer" type="TileMapLayer" parent="ShipInside"]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray(0, 0, 4, 0, 7, 0, 0, 0, 0, 0, 0, 0, 1, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0)
tile_set = SubResource("TileSet_srk18")

[node name="Player" parent="." instance=ExtResource("1_4leii")]
z_index = 1000
z_as_relative = false
y_sort_enabled = false
position = Vector2(111, 57)

[node name="InventoryUI" parent="." instance=ExtResource("4_w6w7q")]

[node name="MissionControlUI" parent="." instance=ExtResource("15_407ir")]
visible = false

[node name="POILandingUI" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="POILandingUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -261.0
offset_right = 283.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wbbk6")

[node name="Label" type="Label" parent="POILandingUI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -245.0
offset_top = 23.0
offset_right = 245.0
offset_bottom = 72.0
grow_horizontal = 2
text = "WYLONDÃ“J NA POI!!11"

[node name="Button" type="Button" parent="POILandingUI/Panel"]
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 190.0
offset_bottom = 120.0
text = "OK"

[node name="PopupMenu" parent="." instance=ExtResource("5_hjbis")]
unfocusable = false

[node name="SpaceBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="SpaceBackground"]
z_index = -9
texture_filter = 1
position = Vector2(-248, -88)
motion_scale = Vector2(0.201, 0.201)
motion_mirroring = Vector2(511.07, 414.565)

[node name="Sprite2D" type="Sprite2D" parent="SpaceBackground/ParallaxLayer2"]
position = Vector2(127, 64)
texture = ExtResource("9_edsw2")

[node name="BalckHoleParallaxLayer" type="ParallaxLayer" parent="SpaceBackground"]
motion_scale = Vector2(0.21, 0.21)

[node name="Sprite2D" type="Sprite2D" parent="SpaceBackground/BalckHoleParallaxLayer"]
texture_filter = 1
position = Vector2(7, 121)
texture = ExtResource("8_pfqgr")
offset = Vector2(2.065, 0.825)

[node name="Sprite2D" type="Sprite2D" parent="SpaceBackground/BalckHoleParallaxLayer/Sprite2D"]
z_index = -5
texture_filter = 1
material = SubResource("CanvasItemMaterial_jxeht")
position = Vector2(-3.3, 0)
scale = Vector2(0.58, 0.58)
texture = ExtResource("11_4qdey")

[node name="GPUParticles2D" type="GPUParticles2D" parent="SpaceBackground/BalckHoleParallaxLayer/Sprite2D"]
amount = 20
sub_emitter = NodePath(".")
lifetime = 4.0
preprocess = 20.0
speed_scale = 0.5
local_coords = true
process_material = SubResource("ParticleProcessMaterial_chtx6")

[node name="ColorRect" type="ColorRect" parent="SpaceBackground"]
z_index = -100
offset_left = -1028.0
offset_top = -523.0
offset_right = 2532.0
offset_bottom = 1571.0
color = Color(0, 0, 0, 1)

[node name="POIBackground" type="Sprite2D" parent="."]
visible = false
z_index = -1000
z_as_relative = false
position = Vector2(232, -89)
texture = ExtResource("24_og020")

[node name="AmbientMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_rh7j6")
autoplay = true

[node name="Ship" type="CharacterBody2D" parent="."]
visible = false
position = Vector2(362, 204)
collision_layer = 4
collision_mask = 0
script = ExtResource("21_4jmuv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ship"]
shape = SubResource("CircleShape2D_bbmoa")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ship"]
position = Vector2(0, 2)
rotation = 4.71239
mesh = SubResource("PrismMesh_4jmuv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(111, 43)
zoom = Vector2(4.2, 4.2)

[node name="POIDetector" type="Area2D" parent="."]
position = Vector2(-525, -16)
collision_layer = 0
collision_mask = 4
script = ExtResource("22_3ngni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="POIDetector"]
shape = SubResource("CircleShape2D_4jmuv")

[node name="Sprite2D" type="Sprite2D" parent="POIDetector"]
texture = ExtResource("23_wbbk6")

[node name="ChargePistol" parent="." instance=ExtResource("21_3ngni")]
position = Vector2(-13, 95)
